docs-archive/apache-airflow-providers-google/22.7.0/_sources/_api/airflow/providers/google/cloud/transfers/postgres_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.postgres_to_gcs
========================================================

.. py:module:: airflow.providers.google.cloud.transfers.postgres_to_gcs

.. autoapi-nested-parse::

   PostgreSQL to GCS operator.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.postgres_to_gcs.PostgresToGCSOperator


Module Contents
---------------

.. py:class:: PostgresToGCSOperator(*, postgres_conn_id='postgres_default', use_server_side_cursor=False, cursor_itersize=2000, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`


   Copy data from Postgres to Google Cloud Storage in JSON, CSV or Parquet format.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:PostgresToGCSOperator`

   :param postgres_conn_id: Reference to a specific Postgres hook.
   :param use_server_side_cursor: If server-side cursor should be used for querying postgres.
       For detailed info, check https://www.psycopg.org/docs/usage.html#server-side-cursors
   :param cursor_itersize: How many records are fetched at a time in case of server-side cursor.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql', 'bucket', 'filename', 'schema_filename', 'schema', 'parameters', 'impersonation_chain',...



   .. py:attribute:: ui_color
      :value: '#a0e08c'



   .. py:attribute:: type_map


   .. py:attribute:: postgres_conn_id
      :value: 'postgres_default'



   .. py:attribute:: use_server_side_cursor
      :value: False



   .. py:attribute:: cursor_itersize
      :value: 2000



   .. py:property:: db_hook
      :type: airflow.providers.postgres.hooks.postgres.PostgresHook



   .. py:method:: query()

      Execute the query and return a cursor.



   .. py:method:: field_to_bigquery(field)

      Convert a DBAPI field to BigQuery schema format.



   .. py:method:: convert_type(value, schema_type, stringify_dict=True)

      Take a value from Postgres and convert it to a value safe for JSON/Google Cloud Storage/BigQuery.

      Timezone aware Datetime are converted to UTC seconds.
      Unaware Datetime, Date and Time are converted to ISO formatted strings.
      Decimals are converted to floats.

      :param value: Postgres column value.
      :param schema_type: BigQuery data type.
      :param stringify_dict: Specify whether to convert dict to string.



   .. py:method:: get_openlineage_facets_on_start()


